--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
   "devDependencies": {
     "@skpm/builder": "^0.5.2"
   },
-  "author": "Ale M <bomberstudios@gmail.com>"
+  "author": "Ale M <ale@sketch.com>",
+  "repository": "https://github.com/BohemianCoding/sketch-ipsum.git"
 }
