--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
     "@skpm/builder": "^0.5.2"
   },
   "author": "Ale M <ale@sketch.com>",
-  "repository": "https://github.com/BohemianCoding/sketch-ipsum.git"
+  "repository": "https://github.com/BohemianCoding/sketch-ipsum.git",
+  "dependencies": {}
 }
