--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
     "postinstall": "npm run build && skpm-link"
   },
   "devDependencies": {
-    "@skpm/builder": "^0.7.4",
+    "@skpm/builder": "^0.7.11",
     "serialize-javascript": ">=3.1.0"
   },
   "author": "Ale M <ale@sketch.com>",
   "license": "MIT",
-  "repository": "https://github.com/BohemianCoding/sketch-ipsum.git",
-  "dependencies": {}
+  "repository": "https://github.com/BohemianCoding/sketch-ipsum.git"
 }
